--- a/learning-equality-v1.1.ipynb
+++ b/learning-equality-v1.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -25,13 +25,15 @@
     "#drive mounting for timestamping\n",
     "#from google.colab import drive\n",
     "#drive.mount('/content/drive')\n",
+    "import os\n",
     "\n",
-    "working_directory = '/home/jacky/workspaces/project_2/'"
+    "working_directory = '/home/jacky_macpro/workspaces/project_2/'\n",
+    "data_directory = os.path.join(working_directory, 'data/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -48,12 +50,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 23313,
@@ -69,14 +71,14 @@
    },
    "outputs": [],
    "source": [
-    "topics = pd.read_csv(working_directory + 'topics.csv')\n",
-    "correlations = pd.read_csv(working_directory + 'correlations.csv')\n",
-    "content = pd.read_csv(working_directory + 'content.csv')"
+    "topics = pd.read_csv(data_directory + 'topics.csv')\n",
+    "correlations = pd.read_csv(data_directory + 'correlations.csv')\n",
+    "content = pd.read_csv(data_directory + 'content.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -92,12 +94,12 @@
    },
    "outputs": [],
    "source": [
-    "submission = pd.read_csv(working_directory + 'sample_submission.csv')"
+    "submission = pd.read_csv(data_directory + 'sample_submission.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -456,7 +458,7 @@
        "9      4       pt  t_dfc8ec591573         True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -725,7 +727,7 @@
        "9          49.0                 194  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -821,7 +823,7 @@
        "4  t_0008768bdee6       c_34e1424229b4 c_7d1a964d66d5 c_aab93ee667f4"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -916,7 +918,7 @@
        "4  t_4054df11a74e                      c_3695c5dc1df6 c_f2d184a98231"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -947,7 +949,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jacky/miniconda3/envs/learning-equality/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/jacky_macpro/miniconda3/envs/learning-equality/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -1067,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1104,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1138,7 +1140,7 @@
        "(61517, 15)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "executionInfo": {
      "elapsed": 1684,
@@ -1228,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1312,7 +1314,7 @@
        "4  t_00068291e9a4  c_639ea2ef9c95"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1364,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "executionInfo": {
      "elapsed": 8001,
@@ -1396,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1419,7 +1421,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00,  7.36it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00,  7.97it/s]\n"
      ]
     },
     {
@@ -1428,7 +1430,7 @@
        "(5, 768)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1509,7 +1511,7 @@
        "(82424, 12)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "background_save": true,
@@ -1545,7 +1547,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 82424/82424 [2:11:44<00:00, 10.43it/s]  \n"
+      "100%|██████████| 82424/82424 [2:17:05<00:00, 10.02it/s]  \n"
      ]
     },
     {
@@ -1554,7 +1556,7 @@
        "(82424, 768)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1580,7 +1582,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61512/61512 [1:49:56<00:00,  9.32it/s]  \n"
+      "  0%|          | 0/61512 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 61512/61512 [1:42:57<00:00,  9.96it/s]  \n"
      ]
     },
     {
@@ -1589,7 +1598,7 @@
        "(61512, 768)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "id": "mKj5nk0zDDtb"
    },
@@ -1616,7 +1625,7 @@
        "(100, 3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {
     "id": "01EEOMD6DDtb"
    },
@@ -1668,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {
     "id": "1CFOsJHWDDtb"
    },
@@ -1682,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {
     "id": "QmFump_0DDtb"
    },
@@ -1696,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {
     "id": "8cBzkajUDDtb"
    },
@@ -1704,10 +1713,10 @@
     {
      "data": {
       "text/plain": [
-       "92"
+       "506"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {
     "id": "igEx4MlvDDtb"
    },
@@ -1730,10 +1739,10 @@
     {
      "data": {
       "text/plain": [
-       "(22, 3)"
+       "(17, 3)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {
     "id": "MVSjxjsUDDtb"
    },
@@ -1796,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {
     "id": "qz7a-nxgDDtb"
    },
@@ -1813,7 +1822,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4641/2127314057.py:16: DeprecationWarning: `awesome_cossim_topn` function will be removed and (partially) replaced with `sp_matmul_topn`. See the migration guide at 'https://github.com/ing-bank/sparse_dot_topn#readme'.\n",
+      "/tmp/ipykernel_5268/2127314057.py:16: DeprecationWarning: `awesome_cossim_topn` function will be removed and (partially) replaced with `sp_matmul_topn`. See the migration guide at 'https://github.com/ing-bank/sparse_dot_topn#readme'.\n",
       "  d = awesome_cossim_topn(V_topic, V_content.T, 20, 0.01, use_threads=True, n_jobs=4)\n"
      ]
     },
@@ -1836,7 +1845,7 @@
        "(100, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {
     "id": "D8o6kgy2DDtb"
    },
@@ -1981,7 +1990,7 @@
        "[154 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2026,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2036,6 +2045,7 @@
     "\n",
     "# 1. Save res_df to CSV\n",
     "res_df.to_csv(os.path.join(timestamps_dir, 'res_df.csv'), index=False)\n",
+    "res_df2.to_csv(os.path.join(timestamps_dir, 'res_df2.csv'), index=False)\n",
     "\n",
     "# 2. Save dup_df to CSV\n",
     "dup_df.to_csv(os.path.join(timestamps_dir, 'dup_df.csv'), index=False)\n",
@@ -2045,6 +2055,8 @@
     "\n",
     "# 4. Save topics DataFrame to CSV\n",
     "topics.to_csv(os.path.join(timestamps_dir, 'topics.csv'), index=False)\n",
+    "train_df.to_csv(os.path.join(timestamps_dir, 'train_df.csv'), index=False)\n",
+    "lookup.to_csv(os.path.join(timestamps_dir, 'lookup.csv'), index=False)\n",
     "\n",
     "# 5. Save corr_df to CSV\n",
     "corr_df.to_csv(os.path.join(timestamps_dir, 'corr_df.csv'), index=False)\n",
@@ -2053,7 +2065,8 @@
     "content.to_csv(os.path.join(timestamps_dir, 'content.csv'), index=False)\n",
     "\n",
     "# 7. Save topic_sub_df DataFrame to CSV\n",
-    "topic_sub_df.to_csv(os.path.join(timestamps_dir, 'topic_sub_df.csv'), index=False)"
+    "topic_sub_df.to_csv(os.path.join(timestamps_dir, 'topic_sub_df.csv'), index=False)\n",
+    "\n"
    ]
   },
   {
@@ -2061,16 +2074,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "timestamps_dir = os.path.join(working_directory, 'timestamps/')\n",
+    "#os.makedirs(timestamps_dir, exist_ok=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Read res_df from CSV\n",
     "res_df = pd.read_csv(os.path.join(timestamps_dir, 'res_df.csv'))\n",
+    "res_df2 = pd.read_csv(os.path.join(timestamps_dir, 'res_df2.csv'))\n",
     "\n",
     "# 2. Read dup_df from CSV\n",
     "dup_df = pd.read_csv(os.path.join(timestamps_dir, 'dup_df.csv'))\n",
@@ -2080,6 +2098,9 @@
     "\n",
     "# 4. Read topics DataFrame from CSV\n",
     "topics = pd.read_csv(os.path.join(timestamps_dir, 'topics.csv'))\n",
+    "train_df = pd.read_csv(os.path.join(timestamps_dir, 'train_df.csv'))\n",
+    "lookup = pd.read_csv(os.path.join(timestamps_dir, 'lookup.csv'))\n",
+    "\n",
     "\n",
     "# 5. Read corr_df from CSV\n",
     "corr_df = pd.read_csv(os.path.join(timestamps_dir, 'corr_df.csv'))\n",
@@ -2093,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {
     "id": "O_fkmviODDtb"
    },
@@ -2102,14 +2123,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4641/4100838950.py:73: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_5268/4100838950.py:73: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  res_df[\"second_degree\"].fillna(False, inplace=True)\n",
-      "/tmp/ipykernel_4641/4100838950.py:73: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_5268/4100838950.py:73: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  res_df[\"second_degree\"].fillna(False, inplace=True)\n"
      ]
     }
@@ -2193,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2239,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
