moving on to EDA

--- a/learning-equality-v1.1.ipynb
+++ b/learning-equality-v1.1.ipynb
@@ -2035,12 +2035,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define working directory and ensure the folder exists\n",
-    "timestamps_dir = os.path.join(working_directory, 'timestamps/')\n",
+    "timestamps_dir = os.path.join(working_directory, 'timestamps_1.1/')\n",
     "os.makedirs(timestamps_dir, exist_ok=True)\n",
     "\n",
     "# 1. Save res_df to CSV\n",
@@ -2067,17 +2067,6 @@
     "# 7. Save topic_sub_df DataFrame to CSV\n",
     "topic_sub_df.to_csv(os.path.join(timestamps_dir, 'topic_sub_df.csv'), index=False)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "timestamps_dir = os.path.join(working_directory, 'timestamps/')\n",
-    "#os.makedirs(timestamps_dir, exist_ok=True)"
    ]
   },
   {
