--- a/Efficiency_530.ipynb
+++ b/Efficiency_530.ipynb
@@ -2411,7 +2411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learning-equality",
+   "display_name": ".learning_equality",
    "language": "python",
    "name": "python3"
   },
@@ -2425,7 +2425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
