--- a/learning-equality-v1.1.ipynb
+++ b/learning-equality-v1.1.ipynb
@@ -2415,7 +2415,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "learning-equality",
+   "display_name": ".learning_equality",
    "language": "python",
    "name": "python3"
   },
@@ -2429,7 +2429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
