rerun topn comparison

--- a/learning_equality_v1_2_sparse_topn_comparison.ipynb
+++ b/learning_equality_v1_2_sparse_topn_comparison.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "id": "nAlSeJDiDDtX"
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "id": "fmvCiiAGDDtY"
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "3cNBIs3AjdOn"
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -310,7 +310,7 @@
        "8  2.1.2 - Logarithms @ 2.1 - Exponents and Logar...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -436,7 +436,7 @@
        "[61517 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -567,7 +567,7 @@
        "[3896 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -934,7 +934,7 @@
        "[3896 rows x 15 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "id": "r564PVctkDIn"
    },
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1071,7 +1071,7 @@
        "[17916 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "id": "YdW7crqaqGIU"
    },
@@ -1191,7 +1191,7 @@
        "[3893 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1317,7 +1317,7 @@
        "[3893 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "id": "JjHiGjL2gbvN"
    },
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1382,7 +1382,7 @@
        "\twith 1 stored elements and shape (1, 6967)>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1406,7 +1406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cosine Similarity (all docs) Runtime: 12.873023271560669 seconds\n"
+      "Cosine Similarity (all docs) Runtime: 11.001545667648315 seconds\n"
      ]
     }
    ],
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1443,7 +1443,8 @@
       "Requirement already satisfied: sparse_dot_topn in ./.learning_equality/lib/python3.10/site-packages (1.1.5)\n",
       "Requirement already satisfied: scipy>=1.4.1 in ./.learning_equality/lib/python3.10/site-packages (from sparse_dot_topn) (1.14.1)\n",
       "Requirement already satisfied: psutil in ./.learning_equality/lib/python3.10/site-packages (from sparse_dot_topn) (6.1.0)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in ./.learning_equality/lib/python3.10/site-packages (from sparse_dot_topn) (2.1.3)\n"
+      "Requirement already satisfied: numpy>=1.18.0 in ./.learning_equality/lib/python3.10/site-packages (from sparse_dot_topn) (2.1.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -1453,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1467,9 +1468,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SKLearn Runtime: 0.3645656108856201 seconds\n",
-      "Sparse Dot Top-N Runtime: 0.019236326217651367 seconds\n",
-      "Using the sparse_dot_topnn package is 19.0 times or 1895% faster\n"
+      "SKLearn Runtime: 0.2441565990447998 seconds\n",
+      "Sparse Dot Top-N Runtime: 0.026689529418945312 seconds\n",
+      "Using the sparse_dot_topnn package is 9.15 times or 915% faster\n"
      ]
     }
    ],
@@ -1528,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1641,7 +1642,7 @@
        "[76940 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "id": "YY__wDFGMowr"
    },
@@ -1672,9 +1673,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SKLearn Runtime: 128.6077013015747 seconds\n",
-      "Sparse Dot Top-N Runtime: 14.54050612449646 seconds\n",
-      "Using the sparse_dot_topnn package is 8.84 times or 884% faster\n"
+      "SKLearn Runtime: 123.66522407531738 seconds\n",
+      "Sparse Dot Top-N Runtime: 13.120257377624512 seconds\n",
+      "Using the sparse_dot_topnn package is 9.43 times or 943% faster\n"
      ]
     }
    ],
